# Furnace-Controller-ESP32

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.old  topics.txt
components/ds18b20/: CMakeLists.txt  ds18b20.c  ds18b20.h
components/furnace_config/: CMakeLists.txt  furnace_config.c  furnace_config.h
components/mqtt_manager/: CMakeLists.txt  mqtt_manager.c  mqtt_manager.h
components/sd_logger/: CMakeLists.txt  sd_logger.c  sd_logger.h
components/wifi_manager/: CMakeLists.txt  wifi_manager.c  wifi_manager.h
main/: CMakeLists.txt  idf_component.yml  main.c  sd_temp.c
